--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.hibernate.ddl-auto = create
 spring.sql.init.platform = donnees-test
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode = always
+
+jwt.secret=${JWT_SECRET}
